--- a/3802-javascript-assincrono-projeto-base/styles.css
+++ b/3802-javascript-assincrono-projeto-base/styles.css
@@ -158,5 +158,5 @@ textarea {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    margin-left: 8pxt;
+    margin-left: 8px;
 }
