estilizações dos botões e da imagem

--- a/3802-javascript-assincrono-projeto-base/styles.css
+++ b/3802-javascript-assincrono-projeto-base/styles.css
@@ -145,6 +145,7 @@ textarea {
     color: var(--primary-color);
     border: 1px solid var(--primary-color);
     position: relative;
+    border-radius: 10px;
 }
 
 .botao-descartar::after {
@@ -159,4 +160,80 @@ textarea {
     top: 50%;
     transform: translateY(-50%);
     margin-left: 8px;
+}
+
+.botao-publicar {
+    background-color: var(--primary-color);
+    color:var(--background-color);
+    border: 1px solid var(--primary-color);
+    position: relative;
+    border-radius: 10px;
+}
+
+.botao-publicar::after {
+    content: "";
+    background-image: url(./img/arrow_forward2.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 15px;
+    height: 15px;
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-left: 8px;
+}
+
+.container-descricao {
+    width: 422px;
+}
+
+.main-imagem {
+    border-radius: 8px;
+    height: 100%;
+    object-fit: cover;
+}
+
+.container-imagem {
+    height: 368px;
+    padding: 24px 16px;
+    background-color: var(--secondary-color);
+    border-radius: 8px;
+}
+
+.container-upload-imagem button {
+    margin: 16px 0 8px 0;
+    background-color: var(--itens-background);
+    border: 1px solid var(--secondary-color);
+    border-radius: 8px;
+    color: var(--secondary-color);
+    width: 100%;
+    text-align: center;
+    padding: 12px;
+    font: var(--font-family);
+    font-weight: 600;
+    font-size: 18px;
+    position: relative;
+    cursor: pointer;
+}
+
+.container-upload-imagem button::after {
+    content: "";
+    background-image: url(./img/upload.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    display: inline-block;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-left: 8px;
+}
+
+.container-imagem-nome {
+    display: flex;
+    gap: 8px;
+    color: var(--secondary-color);
+    font-size: 15px;
 }
