menu hambúrguer adicionado, responsividade para 400px

--- a/3802-javascript-assincrono-projeto-base/styles.css
+++ b/3802-javascript-assincrono-projeto-base/styles.css
@@ -29,12 +29,17 @@ body {
     
 }
 
+.menu-hamburguer {
+    display: none;
+}
+
 aside {
     background-color: var(--itens-background);
     border-radius: 10px;
-    height: 100%;
+    height: 700px;
     padding: 40px 16px;
     text-align: center;
+    flex-wrap: wrap;
 }
 
 .lista-links {
@@ -73,6 +78,7 @@ main {
     display: flex;
     gap: 24px;
     padding: 32px;
+    height: 700px;
 }
 
 h2 {
@@ -240,3 +246,89 @@ textarea {
     color: var(--secondary-color);
     font-size: 15px;
 }
+
+@media (max-width: 420px) {
+    body {
+        flex-direction: column;
+        align-items: center;
+        gap: 16px;
+        padding: 20px;
+    }
+
+    aside {
+        width: 90%;
+        height: auto;
+        padding: 20px;
+
+        position: fixed;
+            top: 0;
+            left: -100%;
+            width: 70%;
+            height: 100vh;
+            background-color: var(--itens-background);
+            transition: left 0.3s ease-in-out;
+            z-index: 1000;
+            padding-top: 20px;
+    }
+
+    .lista-links {
+        margin-top: 40px;
+        gap: 20px;
+    }
+
+    main {
+        flex-direction: column;
+        width: 98%;
+        height: auto;
+        padding: 16px;
+    }
+
+    .container-descricao {
+        width: 100%;
+    }
+
+    .container-botoes {
+        align-items: center;
+        flex-direction: column;
+        gap: 12px;
+    }
+
+    .container-botoes button {
+        width: 90%;
+    }
+
+    .container-imagem {
+        height: auto;
+        padding: 12px;
+    }
+
+    .container-upload-imagem button {
+        font-size: 16px;
+        padding: 10px;
+    }
+
+    .main-imagem {
+        width: 90%;
+        
+    }
+    
+    /* Mostrar o menu quando ativo */
+    aside.menu-ativo {
+        left: 0;
+    }
+
+    /* Estilizar o botão do menu */
+    .menu-hamburguer {
+        display: block;
+        position: fixed;
+        top: 20px;
+        left: 20px;
+        background: none;
+        border: none;
+        font-size: 32px;
+        color: var(--text-color);
+        cursor: pointer;
+        z-index: 1100;
+    }
+}
+    
